--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,32 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
 
     <string name="app_name">Sunshine</string>
     <string name="content_authority">com.example.android.sunshine.app</string>
     <string name="action_settings">Settings</string>
     <string name="action_map">Map Location</string>
     <string name="action_share">Share</string>
-
     <string name="action_refresh" translatable="false">Refresh</string>
     <string name="title_activity_detail">Details</string>
     <string name="title_activity_settings">Settings</string>
-
     <string name="pref_location_label">Location</string>
-
     <string name="pref_location_key" translatable="false">location</string>
-
     <string name="pref_location_default" translatable="false">94043</string>
-
     <string name="pref_units_label">Temperature Units</string>
-
     <string name="pref_units_label_metric">Metric</string>
-
     <string name="pref_units_label_imperial">Imperial</string>
-
     <string name="pref_units_key" translatable="false">units</string>
-
     <string name="pref_units_metric" translatable="false">metric</string>
-
     <string name="pref_units_imperial" translatable="false">imperial</string>
+    <string name="today">Today</string>
+    <string name="tomorrow">Tomorrow</string>
+    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
+    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00b0</string>
+    <string name="format_wind_mph">
+        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$2</xliff:g>
+    </string>
+    <string name="format_wind_kmh">
+        Wind:<xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$2</xliff:g>
+    </string>
+    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1$1.0f</xliff:g> hPa</string>
+    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
+
 
 </resources>
+
