--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
 
     <string name="app_name">Sunshine</string>
-    <string name="content_authority">com.classi.android.sunshine.app</string>
+    <string name="content_authority">com.classic.android.sunshine.app</string>
     <string name="action_settings">Settings</string>
     <string name="action_map">Map Location</string>
     <string name="action_share">Share</string>
